+ (CMS) Fixed a styling issue involving overflow within the Form Builder. (Fixes #6444)

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -21818,6 +21818,22 @@ span.data-view-filter-label {
   float: left;
 }
 
+.filter-rule-comparefield,
+.filter-rule-fields {
+  min-width: 0;
+}
+
+.filter-rule-comparefield .ant-select .ant-select-selector {
+  overflow: hidden;
+}
+
+.filter-rule-comparefield .ant-select .ant-select-selection-item,
+.filter-rule-comparefield .ant-select .ant-select-selection-placeholder {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .contribution-payment .tab-content {
   margin-top: 7.5px;
 }
